--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
@@ -13,7 +12,6 @@
 	<title>Foot and Ball Academy</title>
 
 	<style>
-		/* Add subtle background to sections */
 		#showcase {
 			padding: 60px 0;
 		}
@@ -54,14 +52,12 @@
 			border-radius: 8px;
 		}
 
-		/* Buttons */
 		.btn-register {
 			margin-top: 20px;
 			font-weight: 600;
 			padding: 12px 30px;
 		}
 
-		/* Map Section */
 		#map-section {
 			padding: 60px 0;
 			background: #e9ecef;
@@ -80,7 +76,6 @@
 			height: 350px;
 		}
 
-		/* Get Started Section */
 		#get-started {
 			background: #4274ad;
 			color: white;
@@ -91,7 +86,6 @@
 			border-radius: 0 0 10px 10px;
 		}
 
-		/* Responsive tweaks */
 		@media (max-width: 991px) {
 			.fb-container .fb-page {
 				min-height: 300px;
@@ -101,82 +95,16 @@
 </head>
 
 <body>
+
+	<!-- Facebook SDK -->
 	<div id="fb-root"></div>
 	<script async defer crossorigin="anonymous"
 		src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v18.0" nonce="ndWwdczS"></script>
 
-	<!-- Nav Section Start -->
-	
-<!-- Navbar Section Start -->
-<nav class="navbar navbar-expand-lg navbar-light py-0" style="background-color: #4274AD; box-shadow: 0 2px 5px rgba(0,0,0,0.15);"
-  uk-sticky="top:100; animation: uk-animation-slide-top; bottom: #sticky-on-scroll-up">
-  <div class="container">
-    <a href="index.html" class="navbar-brand" style="font-family: 'Open Sans', sans-serif;">
-      <img src="./img/AssetsMan.png" class="img-fluid p-0" style="height: 40px;">
-      <img src="./img/AssetsTitle.png" class="img-fluid p-0" style="height: 40px;">
-    </a>
-    <button class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navBar" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navBar">
-      <ul class="navbar-nav justify-content-center" style="font-family: 'Open Sans', sans-serif;">
+	<!-- Navbar Load -->
+	<div id="nav-placeholder"></div>
 
-        <!-- New direct links with some spacing and inline hover color -->
-        <li class="nav-item" style="margin: 0 15px;">
-          <a class="nav-link" href="help_im_new.html" 
-             style="color: white;" 
-             onmouseover="this.style.color='#FFD700';" 
-             onmouseout="this.style.color='white';">
-             Help! I'm New
-          </a>
-        </li>
-        <li class="nav-item" style="margin: 0 15px;">
-          <a class="nav-link" href="OurPhilosophy.html" 
-             style="color: white;" 
-             onmouseover="this.style.color='#FFD700';" 
-             onmouseout="this.style.color='white';">
-             Coaching Philosophy
-          </a>
-        </li>
-        <li class="nav-item" style="margin: 0 15px;">
-          <a class="nav-link" href="AcademyPhenomena.html" 
-             style="color: white;" 
-             onmouseover="this.style.color='#FFD700';" 
-             onmouseout="this.style.color='white';">
-             Academy Phenomena
-          </a>
-        </li>
-
-        <!-- Single dropdown -->
-        <li class="nav-item dropdown" style="margin: 0 15px;">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false" style="color: white;">
-            About Us
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="ContactUs.html">Contact Us</a>
-            <a class="dropdown-item" href="Staff.html">Staff</a>
-            <a class="dropdown-item" href="Privacy.html">Privacy</a>
-            <a class="dropdown-item" href="TOS.html">Terms and Conditions</a>
-          </div>
-        </li>
-
-        <!-- Register button -->
-        <li class="nav-item" style="margin: 0 15px;">
-          <a class="btn btn-warning" href="register.html" style="padding: 8px 20px; font-weight: bold;">
-            <b>Register Now</b>
-          </a>
-        </li>
-
-      </ul>
-    </div>
-  </div>
-</nav>
-<!-- Navbar Section End -->
-
-	<!-- Nav Section End -->
-
-	<!-- Showcase Section Start -->
+	<!-- Showcase Section -->
 	<section id="showcase" class="container">
 		<div class="row g-4">
 			<!-- Our Mission -->
@@ -213,13 +141,13 @@
 						from around the world.</p>
 					<p>He always ensures our philosophies, curriculums, and session designs have global citations.</p>
 					<a target="_blank" href="Staff.html">
-						<img src="./img/nick.jpg" alt="Nick - Founder" class="img-fluid rounded-circle" style="max-width: 150px;"/>
+						<img src="./img/nick.jpg" alt="Nick - Founder" class="img-fluid rounded-circle"
+							style="max-width: 150px;" />
 					</a>
 				</div>
 			</div>
 		</div>
 	</section>
-	<!-- Showcase Section End -->
 
 	<!-- Map Section -->
 	<section id="map-section" class="container">
@@ -230,25 +158,25 @@
 			allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 	</section>
 
-	<!-- Get Started Section Start -->
+	<!-- Get Started Section -->
 	<section id="get-started">
 		<div class="container">
 			<h3>Football is the World Game.</h3>
 			<p>Foot and Ball Academy is proud to be a part of that.</p>
 		</div>
 	</section>
-	<!-- Get Started Section End -->
-	<!-- Footer Section Start -->
-	<div id="foot-placeholder"></div>
-	<!-- Footer Section End -->
 
+	<!-- Footer Load -->
+	<div id="foot-placeholder"></div>
+
+	<!-- Scripts -->
 	<script src="js/jquery-3.6.4.min.js"></script>
 	<script src="js/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/uikit.min.js"></script>
 	<script src="js/uikit-icons.min.js"></script>
 
-	<!-- Load navbar and footer -->
+	<!-- Load external navbar and footer -->
 	<script>
 		$(document).ready(function () {
 			$("#nav-placeholder").load("navbar.html");
@@ -257,4 +185,5 @@
 	</script>
 
 </body>
+
 </html>
