--- a/index.html
+++ b/index.html
@@ -2,187 +2,159 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
-	<link rel="stylesheet" href="css/bootstrap.min.css" />
-	<link rel="stylesheet" href="css/main.css" />
-	<link rel="stylesheet" href="css/uikit.min.css" />
-	<link rel="stylesheet" href="css/fontawesome/css/all.css" />
-	<title>Foot and Ball Academy</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Foot and Ball Academy</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/uikit.min.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      background-color: #f4f4f4;
+    }
 
-	<style>
-		#showcase {
-			padding: 60px 0;
-		}
+    .main-section {
+      padding: 50px 15px;
+    }
 
-		.section-card {
-			background: #f8f9fa;
-			padding: 30px;
-			border-radius: 8px;
-			box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-			margin-bottom: 40px;
-			height: 100%;
-		}
+    .section-card {
+      background-color: #ffffff;
+      padding: 20px;
+      margin-bottom: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      height: 100%;
+    }
 
-		.section-card h3 {
-			margin-bottom: 20px;
-			font-weight: 600;
-		}
+    .btn-register {
+      margin-top: 15px;
+    }
 
-		.fb-container {
-			padding: 15px;
-			background: white;
-			border-radius: 8px;
-			box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-			height: 100%;
-			display: flex;
-			flex-direction: column;
-		}
+    .fb-container,
+    #map-section {
+      margin-top: 30px;
+    }
 
-		.fb-container h3 {
-			margin-bottom: 20px;
-			font-weight: 600;
-		}
+    .fb-page {
+      flex-grow: 1;
+      min-height: 400px;
+      width: 100% !important;
+    }
 
-		.fb-page {
-			flex-grow: 1;
-			min-height: 400px;
-			overflow: hidden;
-			border-radius: 8px;
-		}
+    iframe {
+      width: 100% !important;
+      height: 100% !important;
+      max-width: 100%;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
 
-		.btn-register {
-			margin-top: 20px;
-			font-weight: 600;
-			padding: 12px 30px;
-		}
+    #map-section iframe {
+      height: 350px;
+      width: 100%;
+      max-width: 800px;
+      margin: 0 auto;
+      display: block;
+    }
 
-		#map-section {
-			padding: 60px 0;
-			background: #e9ecef;
-			text-align: center;
-		}
-
-		#map-section h3 {
-			margin-bottom: 25px;
-			font-weight: 600;
-		}
-
-		iframe {
-			border-radius: 8px;
-			box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-			max-width: 100%;
-			height: 350px;
-		}
-
-		#get-started {
-			background: #4274ad;
-			color: white;
-			padding: 60px 20px;
-			text-align: center;
-			font-weight: 500;
-			font-size: 1.25rem;
-			border-radius: 0 0 10px 10px;
-		}
-
-		@media (max-width: 991px) {
-			.fb-container .fb-page {
-				min-height: 300px;
-			}
-		}
-	</style>
+    .section-card.text-center {
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+  </style>
 </head>
 
 <body>
+  <!-- Navbar Section Start -->
+  <div id="nav-placeholder"></div>
+  <!-- Navbar Section End -->
 
-	<!-- Facebook SDK -->
-	<div id="fb-root"></div>
-	<script async defer crossorigin="anonymous"
-		src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v18.0" nonce="ndWwdczS"></script>
+  <main class="main-section container">
+    <div class="row">
+      <!-- Our Mission -->
+      <div class="col-lg-3 col-md-6">
+        <div class="section-card text-center d-flex flex-column justify-content-center">
+          <h3>Our Mission</h3>
+          <p>We are an educational establishment focused on long-term individual player development.</p>
+          <p>Think of us like a “primary school” for football, i.e., six y/o to 12 y/o.</p>
+          <p>Due to time and staffing restrictions, we currently only offer elite level sessions targeting ambitious players hungry to improve.</p>
+          <a href="register.html" class="btn btn-info btn-register">Register Now</a>
+        </div>
+      </div>
 
-	<!-- Navbar Load -->
-	<div id="nav-placeholder"></div>
+      <!-- Facebook Feed -->
+      <div class="col-lg-6 col-md-12">
+        <div class="fb-container text-center">
+          <h3>Latest from our Facebook</h3>
+          <div class="fb-page"
+            data-href="https://www.facebook.com/footandball.academy"
+            data-tabs="timeline"
+            data-width="100%"
+            data-height="400"
+            data-small-header="true"
+            data-adapt-container-width="true"
+            data-hide-cover="true"
+            data-show-facepile="false">
+            <blockquote cite="https://www.facebook.com/footandball.academy" class="fb-xfbml-parse-ignore">
+              <a href="https://www.facebook.com/footandball.academy">Foot and Ball Academy Facebook</a>
+            </blockquote>
+          </div>
+        </div>
+      </div>
 
-	<!-- Showcase Section -->
-	<section id="showcase" class="container">
-		<div class="row g-4">
-			<!-- Our Mission -->
-			<div class="col-lg-3 col-md-6">
-				<div class="section-card d-flex flex-column">
-					<h3>Our Mission</h3>
-					<p>We are an educational establishment focused on long-term individual player development.</p>
-					<p>Think of us like a “primary school” for football, i.e., six y/o to 12 y/o.</p>
-					<p>Due to time and staffing restrictions, we currently only offer elite level sessions targeting ambitious
-						players hungry to improve.</p>
-					<a href="register.html" class="btn btn-info btn-register">Register Now</a>
-				</div>
-			</div>
+      <!-- Upcoming Info -->
+      <div class="col-lg-3 col-md-6">
+        <div class="section-card">
+          <h3>Upcoming Info</h3>
+          <ul>
+            <li>Spring Term Starts – Sept 1</li>
+            <li>Holiday Training – Book Now!</li>
+            <li>Trial Sessions – Enquire Today</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </main>
 
-			<!-- Facebook Feed -->
-			<div class="col-lg-6 col-md-12">
-				<div class="fb-container">
-					<h3>Latest from our Facebook</h3>
-					<div class="fb-page" data-href="https://www.facebook.com/footandball.academy" data-tabs="timeline"
-						data-width="" data-height="" data-small-header="true" data-adapt-container-width="true"
-						data-hide-cover="true" data-show-facepile="false">
-						<blockquote cite="https://www.facebook.com/footandball.academy" class="fb-xfbml-parse-ignore">
-							<a href="https://www.facebook.com/footandball.academy">Foot and Ball Academy Facebook</a>
-						</blockquote>
-					</div>
-				</div>
-			</div>
+  <section id="map-section" class="container">
+    <h3>Find Us</h3>
+    <p>McQuade Park<br />Entry off Tebbutt Street, Windsor, NSW 2756</p>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3322.8489523349785!2d150.81155187479513!3d-33.60922340565935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d632d517065a9%3A0x50b3af72ab29c0f0!2sHawkesbury%20Valley%20Rugby%20Union%20Club!5e0!3m2!1sen!2sau!4v1746923599529!5m2!1sen!2sau"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+  </section>
 
-			<!-- Meet Our Founder -->
-			<div class="col-lg-3 col-md-6">
-				<div class="section-card text-center d-flex flex-column align-items-center">
-					<h3>Meet Our Founder</h3>
-					<p>Nick has dedicated Foot and Ball Academy to incorporating the latest trends in football education
-						from around the world.</p>
-					<p>He always ensures our philosophies, curriculums, and session designs have global citations.</p>
-					<a target="_blank" href="Staff.html">
-						<img src="./img/nick.jpg" alt="Nick - Founder" class="img-fluid rounded-circle"
-							style="max-width: 150px;" />
-					</a>
-				</div>
-			</div>
-		</div>
-	</section>
+  <!-- Get Started Section Start -->
+  <section id="get-started">
+    <div class="container">
+      <h3>Football is the World Game.</h3>
+      <p>Foot and Ball Academy is proud to be a part of that.</p>
+    </div>
+  </section>
+  <!-- Get Started Section End -->
 
-	<!-- Map Section -->
-	<section id="map-section" class="container">
-		<h3>Find Us</h3>
-		<p>McQuade Park<br />Entry off Tebbutt Street, Windsor, NSW 2756</p>
-		<iframe
-			src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3322.8489523349785!2d150.81155187479513!3d-33.60922340565935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d632d517065a9%3A0x50b3af72ab29c0f0!2sHawkesbury%20Valley%20Rugby%20Union%20Club!5e0!3m2!1sen!2sau!4v1746923599529!5m2!1sen!2sau"
-			allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-	</section>
+  <!-- Footer Section Start -->
+  <div id="foot-placeholder"></div>
+  <!-- Footer Section End -->
 
-	<!-- Get Started Section -->
-	<section id="get-started">
-		<div class="container">
-			<h3>Football is the World Game.</h3>
-			<p>Foot and Ball Academy is proud to be a part of that.</p>
-		</div>
-	</section>
-
-	<!-- Footer Load -->
-	<div id="foot-placeholder"></div>
-
-	<!-- Scripts -->
-	<script src="js/jquery-3.6.4.min.js"></script>
-	<script src="js/popper.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/uikit.min.js"></script>
-	<script src="js/uikit-icons.min.js"></script>
-
-	<!-- Load external navbar and footer -->
-	<script>
-		$(document).ready(function () {
-			$("#nav-placeholder").load("navbar.html");
-			$("#foot-placeholder").load("footer.html");
-		});
-	</script>
+  <!-- JS Scripts -->
+  <script src="js/jquery-3.6.4.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/uikit.min.js"></script>
+  <script src="js/uikit-icons.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      $("#nav-placeholder").load("navbar.html");
+      $("#foot-placeholder").load("footer.html");
+    });
+  </script>
 
 </body>
 
