--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Foot and Ball Academy</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/uikit.min.css" />
@@ -32,45 +32,37 @@
       margin-top: 15px;
     }
 
-    /* CENTER COLUMN 1 CONTENT */
-    .mission-card {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      height: 100%;
-    }
-
-    /* FACEBOOK FEED CONTAINER */
-    .fb-container {
-      margin-top: 30px;
-      height: 450px; /* fixed height so Facebook feed can fill */
-    }
-
-    /* Make Facebook feed iframe fill container */
-    .fb-page,
-    .fb-page > span,
-    .fb-page > span > iframe {
-      width: 100% !important;
-      height: 100% !important;
-      min-height: 400px;
-    }
-
-    /* MAP SECTION */
+    .fb-container,
     #map-section {
       margin-top: 30px;
     }
 
-    #map-section iframe {
+    .fb-page {
+      flex-grow: 1;
+      min-height: 400px;
       width: 100% !important;
-      height: 400px !important;
+    }
+
+    iframe {
+      width: 100% !important;
+      height: 100% !important;
+      max-width: 100%;
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      border: none;
-      display: block;
+    }
+
+    #map-section iframe {
+      height: 350px;
+      width: 100%;
+      max-width: 800px;
       margin: 0 auto;
-      max-width: 100%;
+      display: block;
+    }
+
+    .section-card.text-center {
+      align-items: center;
+      justify-content: center;
+      text-align: center;
     }
   </style>
 </head>
@@ -83,8 +75,8 @@
   <main class="main-section container">
     <div class="row">
       <!-- Our Mission -->
-      <div class="col-lg-3 col-md-6 d-flex">
-        <div class="section-card mission-card">
+      <div class="col-lg-3 col-md-6">
+        <div class="section-card text-center d-flex flex-column justify-content-center">
           <h3>Our Mission</h3>
           <p>We are an educational establishment focused on long-term individual player development.</p>
           <p>Think of us like a “primary school” for football, i.e., six y/o to 12 y/o.</p>
@@ -100,8 +92,8 @@
           <div class="fb-page"
             data-href="https://www.facebook.com/footandball.academy"
             data-tabs="timeline"
-            data-width="500"
-            data-height="450"
+            data-width="100%"
+            data-height="400"
             data-small-header="true"
             data-adapt-container-width="true"
             data-hide-cover="true"
