--- a/index.html
+++ b/index.html
@@ -105,15 +105,17 @@
         </div>
       </div>
 
-      <!-- Upcoming Info -->
+      <!-- Meet Our Founder -->
       <div class="col-lg-3 col-md-6">
-        <div class="section-card">
-          <h3>Upcoming Info</h3>
-          <ul>
-            <li>Spring Term Starts – Sept 1</li>
-            <li>Holiday Training – Book Now!</li>
-            <li>Trial Sessions – Enquire Today</li>
-          </ul>
+        <div class="section-card text-center d-flex flex-column align-items-center">
+          <h3>Meet Our Founder</h3>
+          <p>Nick has dedicated Foot and Ball Academy to incorporating the latest trends in football education
+            from around the world.</p>
+          <p>He always ensures our philosophies, curriculums, and session designs have global citations.</p>
+          <a target="_blank" href="Staff.html">
+            <img src="./img/nick.jpg" alt="Nick - Founder" class="img-fluid rounded-circle"
+              style="max-width: 150px;" />
+          </a>
         </div>
       </div>
     </div>
