--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
 </head>
 
 <body>
+  <!-- Facebook SDK -->
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous"
+    src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0"
+    nonce="FBSDK"></script>
+
   <!-- Navbar Section Start -->
   <div id="nav-placeholder"></div>
   <!-- Navbar Section End -->
@@ -92,7 +98,7 @@
           <div class="fb-page"
             data-href="https://www.facebook.com/footandball.academy"
             data-tabs="timeline"
-            data-width="100%"
+            data-width="500"
             data-height="400"
             data-small-header="true"
             data-adapt-container-width="true"
@@ -125,11 +131,9 @@
     <h3>Find Us</h3>
     <p>McQuade Park<br />Entry off Tebbutt Street, Windsor, NSW 2756</p>
     <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3322.8489523349785!2d150.81155187479513!3d-33.60922340565935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d632d517065a9%3A0x50b3af72ab29c0f0!2sHawkesbury%20Valley%20Rugby%20Union%20Club!5e0!3m2!1sen!2sau!4v1746923599529!5m2!1sen!2sau"
-      allowfullscreen=""
-      loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3322.8489523349785!2d150.8115519!3d-33.6092234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d632d517065a9%3A0x50b3af72ab29c0f0!2sMcQuade%20Park!5e0!3m2!1sen!2sau!4v1590543753666!5m2!1sen!2sau"
+      width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"></iframe>
   </section>
 
   <!-- Get Started Section Start -->
