--- a/index.html
+++ b/index.html
@@ -51,12 +51,19 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
+    #map-section {
+      margin-top: 30px;
+      margin-bottom: 50px;
+    }
+
+    #map-section h3,
+    #map-section p {
+      text-align: center;
+    }
+
     #map-section iframe {
-      height: 350px;
-      width: 100%;
-      max-width: 800px;
-      margin: 0 auto;
-      display: block;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     .section-card.text-center {
@@ -127,13 +134,17 @@
     </div>
   </main>
 
-  <section id="map-section" class="container">
-    <h3>Find Us</h3>
-    <p>McQuade Park<br />Entry off Tebbutt Street, Windsor, NSW 2756</p>
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3322.8489523349785!2d150.8115519!3d-33.6092234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d632d517065a9%3A0x50b3af72ab29c0f0!2sMcQuade%20Park!5e0!3m2!1sen!2sau!4v1590543753666!5m2!1sen!2sau"
-      width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade"></iframe>
+  <section id="map-section" class="container my-5">
+    <h3 class="text-center">Find Us</h3>
+    <p class="text-center">McQuade Park<br />Entry off Tebbutt Street, Windsor, NSW 2756</p>
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-10 col-lg-8">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3322.8489523349785!2d150.8115519!3d-33.6092234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d632d517065a9%3A0x50b3af72ab29c0f0!2sMcQuade%20Park!5e0!3m2!1sen!2sau!4v1590543753666!5m2!1sen!2sau"
+          width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </div>
   </section>
 
   <!-- Get Started Section Start -->
