--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
   </section>
 
   <!-- Get Started Section Start -->
-  <section id="get-started">
-    <div class="container">
+  <section id="get-started" class="bg-primary text-white py-5">
+    <div class="container text-center">
       <h3>Football is the World Game.</h3>
       <p>Foot and Ball Academy is proud to be a part of that.</p>
     </div>
@@ -157,7 +157,9 @@
   <!-- Get Started Section End -->
 
   <!-- Footer Section Start -->
-  <div id="foot-placeholder"></div>
+  <footer class="bg-primary text-white text-center py-3">
+    <div id="foot-placeholder"></div>
+  </footer>
   <!-- Footer Section End -->
 
   <!-- JS Scripts -->
