--- a/index.html
+++ b/index.html
@@ -148,19 +148,20 @@
   </section>
 
   <!-- Get Started Section Start -->
-  <section id="get-started" class="bg-primary text-white py-5">
-    <div class="container text-center">
-      <h3>Football is the World Game.</h3>
-      <p>Foot and Ball Academy is proud to be a part of that.</p>
-    </div>
-  </section>
-  <!-- Get Started Section End -->
+<section id="get-started" style="background-color: #0d6efd; color: white; padding: 3rem 0; text-align: center;">
+  <div class="container">
+    <h3>Football is the World Game.</h3>
+    <p>Foot and Ball Academy is proud to be a part of that.</p>
+  </div>
+</section>
+<!-- Get Started Section End -->
 
-  <!-- Footer Section Start -->
-  <footer class="bg-primary text-white text-center py-3">
-    <div id="foot-placeholder"></div>
-  </footer>
-  <!-- Footer Section End -->
+<!-- Footer Section Start -->
+<footer style="background-color: #0d6efd; color: white; text-align: center; padding: 1rem 0;">
+  <div id="foot-placeholder"></div>
+</footer>
+<!-- Footer Section End -->
+
 
   <!-- JS Scripts -->
   <script src="js/jquery-3.6.4.min.js"></script>
