--- a/index.html
+++ b/index.html
@@ -44,17 +44,16 @@
     }
 
     iframe {
-  width: 100% !important;
-  max-width: 100%;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
+      width: 100% !important;
+      max-width: 100%;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
 
-  /* Target only the map iframe inside #map-section */
-  #map-section iframe {
-  height: 500px !important;
-  }
-
+    /* Target only the map iframe inside #map-section */
+    #map-section iframe {
+      height: 500px !important;
+    }
 
     #map-section {
       margin-top: 30px;
@@ -145,41 +144,4 @@
     <div class="row justify-content-center">
       <div class="col-12 col-md-10 col-lg-8">
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d994.0376535072251!2d150.81278093372703!3d-33.60963318454133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d6289c228e761%3A0xf017d68f9f15730!2sMcQuade%20Park!5e1!3m2!1sen!2sau!4v1754127213533!5m2!1sen!2sau"
-          width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
-    </div>
-  </section>
-
-  <!-- Get Started Section Start -->
-  <section id="get-started" style="background-color: #4274AD; color: white; padding: 3rem 0; text-align: center;">
-    <div class="container">
-      <h3>Football is the World Game.</h3>
-      <p>Foot and Ball Academy is proud to be a part of that.</p>
-    </div>
-  </section>
-  <!-- Get Started Section End -->
-
-  <!-- Footer Section Start -->
-  <footer style="background-color: #4274AD; color: white; text-align: center; padding: 1rem 0;">
-    <div id="foot-placeholder"></div>
-  </footer>
-  <!-- Footer Section End -->
-
-  <!-- JS Scripts -->
-  <script src="js/jquery-3.6.4.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/uikit.min.js"></script>
-  <script src="js/uikit-icons.min.js"></script>
-  <script>
-    $(document).ready(function () {
-      $("#nav-placeholder").load("navbar.html");
-      $("#foot-placeholder").load("footer.html");
-    });
-  </script>
-
-</body>
-
-</html>
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d994.0376535072251!2d150.81278093372703!3d-33.60963318454133!2m3!1f0!2f0!3f0!
