--- a/footer.html
+++ b/footer.html
@@ -1,9 +1,10 @@
-<footer id="footer" class="py-3 text-center text-light">
+<footer id="footer" class="py-3 text-center text-light" style="background-color: #111;">
   <div class="container" style="max-width:100%">
     <div class="row" style="margin-bottom:10px">
       <div class="col">
-        <h6 class="display-5 mb-0 text-light"> <img src="./img/android-chrome-512x512.png" class="img-fluid p-0"
-            style="height: 40px; "> FOOT AND BALL ACADEMY </h2>
+        <h6 class="display-5 mb-0 text-light">
+          <img src="./img/android-chrome-512x512.png" class="img-fluid p-0" style="height: 40px;"> FOOT AND BALL ACADEMY
+        </h6>
       </div>
     </div>
     <div class="row" style="margin-bottom:20px">
@@ -11,16 +12,18 @@
         <i class="fa fa-phone" style="width:30px"></i> +61 452 583 279<br>
       </div>
       <div class="col-lg-3 align-self-center">
-        <i class="fa fa-envelope" style="width:30px"> </i> footandballacademy@outlook.com<br>
+        <i class="fa fa-envelope" style="width:30px"></i> footandballacademy@outlook.com<br>
       </div>
       <div class="col-lg-3 align-self-center">
-        <a href="https://www.instagram.com/footandballacademy/" ><i class="fab fa-instagram" style="width:30px"> </i> @footandballacademy </a><br>
+        <a href="https://www.instagram.com/footandballacademy/" style="color:#ccc;">
+          <i class="fab fa-instagram" style="width:30px"></i> @footandballacademy
+        </a><br>
       </div>
       <div class="col-lg-3 align-self-center">
-        <a href="https://www.facebook.com/100090119914421" ><i class="fab fa-facebook-f" style="width:30px"> </i> facebook.com/footandballacademy </a><br>
+        <a href="https://www.facebook.com/100090119914421" style="color:#ccc;">
+          <i class="fab fa-facebook-f" style="width:30px"></i> facebook.com/footandballacademy
+        </a><br>
       </div>
-
     </div>
   </div>
 </footer>
-
