--- a/footer.html
+++ b/footer.html
@@ -9,10 +9,10 @@
     </div>
     <div class="row" style="margin-bottom:20px">
       <div class="col-lg-3 align-self-center">
-        <i class="fa fa-phone" style="width:30px"></i> +61 452 583 279<br>
+        <i class="fa-solid fa-phone" style="width:30px"></i> +61 452 583 279<br>
       </div>
       <div class="col-lg-3 align-self-center">
-        <i class="fa fa-envelope" style="width:30px"></i> footandballacademy@outlook.com<br>
+        <i class="fa-solid fa-envelope" style="width:30px"></i> footandballacademy@outlook.com<br>
       </div>
       <div class="col-lg-3 align-self-center">
         <a href="https://www.instagram.com/footandballacademy/" style="color:#ccc;">
