--- a/index.html
+++ b/index.html
@@ -163,17 +163,8 @@
   <!-- Get Started Section End -->
 
   <!-- Footer Section Start -->
-  <footer style="background:#111; color:#ccc; text-align:center; padding:1rem;">
-  <i class="fa-solid fa-phone" style="font-size:24px; margin-right:8px;"></i>
-  +61 452 583 279<br>
-  <i class="fa-solid fa-envelope" style="font-size:24px; margin-right:8px;"></i>
-  footandballacademy@outlook.com<br>
-  <a href="https://www.instagram.com/footandballacademy/" style="color:#ccc;">
-    <i class="fab fa-instagram" style="font-size:24px; margin-right:8px;"></i>@footandballacademy
-  </a><br>
-  <a href="https://www.facebook.com/100090119914421" style="color:#ccc;">
-    <i class="fab fa-facebook-f" style="font-size:24px; margin-right:8px;"></i>facebook.com/footandballacademy
-  </a>
+<footer>
+  <div id="foot-placeholder"></div>
 </footer>
   <!-- Footer Section End -->
 
