--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Foot and Ball Academy</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/uikit.min.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/main.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-pO2XEMGVpjG+V1U++9p/YqDqkRW5j4r5fTz+6LUvn6OLN8CJ5EZ02JsqfZ8kqSjpF3aKyMogRbqKOa0zKx1qPQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     body {
