--- a/index.html
+++ b/index.html
@@ -153,14 +153,15 @@
     </div>
   </section>
 
-  <!-- Get Started Section Start -->
-  <section id="get-started" style="background-color: #4274AD; color: white; padding: 3rem 0; text-align: center;">
-    <div class="container">
-      <h3>Football is the World Game.</h3>
-      <p>Foot and Ball Academy is proud to be a part of that.</p>
-    </div>
-  </section>
-  <!-- Get Started Section End -->
+<!-- Get Started Section Start -->
+<section id="get-started" style="background-color: #4274AD; color: white; padding: 3rem 0; text-align: center; background-image: none !important;">
+  <div class="container">
+    <h3 style="font-size: 3rem; font-weight: bold; margin-bottom: 1rem;">Football is the World Game.</h3>
+    <p style="font-size: 1.8rem;">Foot and Ball Academy is proud to be a part of that.</p>
+  </div>
+</section>
+<!-- Get Started Section End -->
+
 
   <!-- Footer Section Start -->
 <footer>
