--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Foot and Ball Academy</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/uikit.min.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/main.css" />
   <style>
     body {
       font-family: Arial, sans-serif;
