--- a/OurPhilosophy.html
+++ b/OurPhilosophy.html
@@ -27,10 +27,8 @@
 					<div class="col mt-5 pt-4">
 						<h1 class="text-light">Our Philosophy</h1>
 						<p class="lead">
-							At Foot and Ball Academy, our primary goal is to help players develop a sustainable desire to
-							participate in the World Game, known as football. We endeavour to create a healthy
-							environment, where players are taught to understand and then handle the competitive aspects of
-							the game, in the hopes they continue to play well into their adult lives.
+							At Foot and Ball Academy, we believe our approach to coaching sets us apart. 
+							It all starts with the clear definition and understanding of the popularised term 'player development.'
 						</p>
 					</div>
 				</div>
@@ -44,14 +42,13 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-6  align-self-center">
+					<h2 class="text-light">Player Development</h2>
 					<p class="lead">
-						From U6's, Foot and Ball Academy sessions maintain <strong>a principal focus on player development around the 1 v
-							1 duel.</strong> This is motivated by our CORE Philosophy, which follows a popularised philosophy utilised in elite parts of Europe (not our own):
+					This term gets deployed in the grassroots space... a lot. Typically, it’s an excuse to get all the ‘best’ local players together in a super team and ‘win’ things, that’s about it. 
 					</p>
 
 					<p class="lead">
-						<em>“Improving the individual player, improves the overall team.”</em> We strive to
-						improve the technical, conceptual, and mental aspects of an individual player, irrespective of their level.
+					Let’s break down the Academy interpretations of Player development and how it SHOULD express itself: 
 					</p>
 
 				</div>
