--- a/OurPhilosophy.html
+++ b/OurPhilosophy.html
@@ -42,7 +42,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-6  align-self-center">
-					<h2 class="text-light">Player Development</h2>
+					<h2 class="text-dark">Player Development</h2>
 					<p class="lead">
 					This term gets deployed in the grassroots space... a lot. Typically, it’s an excuse to get all the ‘best’ local players together in a super team and ‘win’ things, that’s about it. 
 					</p>
